--- a/flask/static/main__css/paldo_select.css
+++ b/flask/static/main__css/paldo_select.css
@@ -1,5 +1,7 @@
 .wrap {
-    max-width: 200px
+    max-width: 200px;
+    position:relative;
+    top:20px;
   }
   .selectbox {
       display: block;
