--- a/flask/templates/index.html
+++ b/flask/templates/index.html
@@ -82,16 +82,16 @@
                     <link rel="stylesheet" href="{{url_for('static', filename='main__css/paldo_select.css')}}">
                     <select class="selectbox" id="type__paldo">
                         <option>지역은?</option>
-                        <option value="서울">서울</option>
-                        <option value="부산">부산</option>
-                        <option value="대구">대구</option> 
-                        <option value="인천">인천</option>
-                        <option value="광주">광주</option>
-                        <option value="대전">대전</option>
-                        <option value="울산">울산</option>
-                        <option value="세종">세종</option>
-                        <option value="경기">경기</option>
-                        <option value="강원">강원</option>
+                        <option value="서울특">서울</option>
+                        <option value="부산광">부산</option>
+                        <option value="대구광">대구</option> 
+                        <option value="인천광">인천</option>
+                        <option value="광주광">광주</option>
+                        <option value="대전광">대전</option>
+                        <option value="울산광">울산</option>
+                        <option value="세종특별">세종</option>
+                        <option value="경기도">경기</option>
+                        <option value="강원도">강원</option>
                         <option value="충청북도">충북</option>
                         <option value="충청남도">충남</option>
                         <option value="전라북도">전북</option>
