--- a/flask/templates/index.html
+++ b/flask/templates/index.html
@@ -119,7 +119,7 @@
                     <option value="가족">가족</option>
                     <option value="친구">친구</option>
                     <option value="연인">연인</option>
-                    <option value="반려견 동반">반려견 동반</option>
+                    <option value="반려견">반려견 동반</option>
                 </select>
 
             </div>
