열린관광 이미지

--- a/flask/templates/infopage.html
+++ b/flask/templates/infopage.html
@@ -22,6 +22,7 @@
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body>
+  
     <div class="container" style="height: auto;">
         <div class="header">
             <span class="menubar">
@@ -69,32 +70,39 @@
                     <button id="a4" type="button" style=background-color:white class="btn btn-secondary"><h style=font-size:14px;color:rgb(160,208,151)>일회용기 미사용</h></button>
                   </div>
                 </div> -->
-                <br>
-                <h style=font-weight:bold>열린 관광 요소</h><br><br>
-                <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
-                  <div class="btn-group mr-2" role="group" aria-label="First group" style="position:absloute;">
-                    <button id="b1" type="button" style=background-color:white class="btn btn-secondary"><h id="bb1" style='font-size:14px;color:rgb(157,186,209)'>장애인 화장실</h></button>
-                      <button id="b2" type="button" style=background-color:white class="btn btn-secondary"><h id="bb2" style=font-size:14px;color:rgb(157,186,209)>장애인용 엘리베이터</h></button>
-                      <button id="b3" type="button" style=background-color:white class="btn btn-secondary"><h id="bb3" style=font-size:14px;color:rgb(157,186,209)>장애인 전용 주차구역</h></button>
-                      <button id="b4" type="button" style=background-color:white class="btn btn-secondary"><h id="bb4" style=font-size:14px;color:rgb(157,186,209)>주출입구 단차없음</h></button>
+                <br><br>
+                <h style=font-weight:bold>열린 관광 요소</h><br>
+
+                <!-- <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
+                  <div class="btn-group mr-2" role="group" aria-label="First group">
+                    <button type="button" class="btn btn-secondary">1</button>
+                    <button type="button" class="btn btn-secondary">2</button>
+                    <button type="button" class="btn btn-secondary">3</button>
+                    <button type="button" class="btn btn-secondary">4</button>
+                    <button type="button" class="btn btn-secondary">5</button>
+                    <button type="button" class="btn btn-secondary">6</button>
+                  </div> -->
+
+                  
+
+                <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups"></div>
+                  <div class="btn-group mr-2" role="group" aria-label="First group" style="position:absloute">
+                    
+                    <img id="b1" title="장애인 화장실" src="../static/열린관광이미지/장애인화장실F.png" width="50px" height="50px">
+                    <img id="b2" title="장애인용 엘리베이터" src="../static/열린관광이미지/장애인용엘리베이터F.png" width="50px" height="50px">
+                    <img id="b3" title="장애인 전용 주차구역" src="../static/열린관광이미지/장애인전용주차구역F.png" width="50px" height="50px">
+                    <img id="b4" title="주출입구 단차없음" src="../static/열린관광이미지/주출입구단차없음F.png" width="50px" height="50px">
+                    <img id="b5" title="지하철 접근가능" src="../static/열린관광이미지/지하철접근가능F.png" width="50px" height="50px">
+                    <img id="b6" title="저상버스 접근가능" src="../static/열린관광이미지/저상버스접근가능F.png" width="50px" height="50px">
+                    <img id="b7" title="휠체어 대여" src="../static/열린관광이미지/휠체어대여F.png" width="50px" height="50px">
+                    <img id="b8" title="시각장애인 편의서비스" src="../static/열린관광이미지/시각장애인편의서비스F.png" width="50px" height="50px">
+                    <img id="b9" title="청각장애인 편의서비스" src="../static/열린관광이미지/청각장애인편의서비스F.png" width="50px" height="50px">
+                    <img id="b10" title="수유실" src="../static/열린관광이미지/수유실F.png" width="50px" height="50px">
+                    <img id="b11" title="장애인 객실" src="../static/열린관광이미지/장애인객실F.png" width="50px" height="50px">
+                    <img id="b12" title="유모차 대여" src="../static/열린관광이미지/유모차대여F.png" width="50px" height="50px">
                     </div>
                   </div>
-                  <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
-                    <div class="btn-group mr-2" role="group" aria-label="First group" style="position:absloute; left:30px">
-                      <button id="b5" type="button" style=background-color:white class="btn btn-secondary"><h id="bb5" style=font-size:14px;color:rgb(157,186,209)>지하철 접근가능</h></button>
-                      <button id="b6" type="button" style=background-color:white class="btn btn-secondary"><h id="bb6" style='font-size:14px;color:rgb(157,186,209)'>저상버스 접근가능</h></button>
-                      <button id="b7" type="button" style=background-color:white class="btn btn-secondary"><h id="bb7" style=font-size:14px;color:rgb(157,186,209)>휠체어 대여</h></button>
-                      <button id="b8" type="button" style=background-color:white class="btn btn-secondary"><h id="bb8" style=font-size:14px;color:rgb(157,186,209)>시각장애인 편의</h></button>
-                    </div>
-                  </div>
-                  <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
-                    <div class="btn-group mr-2" role="group" aria-label="First group" style="position:absloute; left:75px">
-                      <button id="b9" type="button" style=background-color:white class="btn btn-secondary"><h id="bb9" style=font-size:14px;color:rgb(157,186,209)>청각장애인 편의</h></button>
-                      <button id="b10" type="button" style=background-color:white class="btn btn-secondary"><h id="bb10" style=font-size:14px;color:rgb(157,186,209)>수유실</h></button>
-                      <button id="b11" type="button" style=background-color:white class="btn btn-secondary"><h id="bb11" style=font-size:14px;color:rgb(157,186,209)>장애인 객실</h></button>
-                      <button id="b12" type="button" style=background-color:white class="btn btn-secondary"><h id="bb12" style='font-size:14px;color:rgb(157,186,209)'>유모차 대여</h></button>
-                    </div>
-                  </div>
+                  <br><br>
 
                   <script>
               var Data = $('#my-data').data();
@@ -103,140 +111,116 @@
 
               if(Data.help.indexOf("장애인 화장실") != -1)
                 {
-                    $("#b1").attr("style","background-color:rgb(157,186,209)");
-                    $("#bb1").attr("style","font-size:14px;color:white");
+                  $("#b1").attr("src","../static/열린관광이미지/장애인화장실T.png");
                 }
                 else
                 {
-                    $("#b1").attr("style","background-color:white");
-                    $("#bb1").attr("style","font-size:14px;color:rgb(157,186,209)");
+                  $("#b1").attr("src","../static/열린관광이미지/장애인화장실F.png");
                 }
                 
                 if(Data.help.indexOf("장애인용 엘리베이터") != -1)
                 {
-                    $("#b2").attr("style","background-color:rgb(157,186,209)");
-                    $("#bb2").attr("style","font-size:14px;color:white");
+                  $("#b2").attr("src","../static/열린관광이미지/장애인용엘리베이터T.png");
                 }
                 else
                 {
-                    $("#b2").attr("style","background-color:white");
-                    $("#bb2").attr("style","font-size:14px;color:rgb(157,186,209)");
+                  $("#b2").attr("src","../static/열린관광이미지/장애인용엘리베이터F.png");
                 }
 
                 if(Data.help.indexOf("장애인 전용 주차구역") != -1)
                 {
-                    $("#b3").attr("style","background-color:rgb(157,186,209)");
-                    $("#bb3").attr("style","font-size:14px;color:white");
+                  $("#b3").attr("src","../static/열린관광이미지/장애인전용주차구역T.png");
                 }
                 else
                 {
-                    $("#b3").attr("style","background-color:white");
-                    $("#bb3").attr("style","font-size:14px;color:rgb(157,186,209)");
+                  $("#b3").attr("src","../static/열린관광이미지/장애인전용주차구역F.png");
                 }
 
                 if(Data.help.indexOf("주출입구 단차없음") != -1)
                 {
-                    $("#b4").attr("style","background-color:rgb(157,186,209)");
-                    $("#bb4").attr("style","font-size:14px;color:white");
+                  $("#b4").attr("src","../static/열린관광이미지/주출입구단차없음T.png");
                 }
                 else
                 {
-                    $("#b4").attr("style","background-color:white");
-                    $("#bb4").attr("style","font-size:14px;color:rgb(157,186,209)");
+                  $("#b4").attr("src","../static/열린관광이미지/주출입구단차없음F.png");
                 }
 
                 if(Data.help.indexOf("지하철 접근가능") != -1)
                 {
-                    $("#b5").attr("style","background-color:rgb(157,186,209)");
-                    $("#bb5").attr("style","font-size:14px;color:white");
+                  $("#b5").attr("src","../static/열린관광이미지/지하철접근가능T.png");
                 }
                 else
                 {
-                    $("#b5").attr("style","background-color:white");
-                    $("#bb5").attr("style","font-size:14px;color:rgb(157,186,209)");
+                  $("#b5").attr("src","../static/열린관광이미지/지하철접근가능F.png");
                 }
 
                 if(Data.help.indexOf("저상버스 접근가능") != -1)
                 {
-                    $("#b6").attr("style","background-color:rgb(157,186,209)");
-                    $("#bb6").attr("style","font-size:14px;color:white");
+                  $("#b6").attr("src","../static/열린관광이미지/저상버스접근가능T.png");
                 }
                 else
                 {
-                    $("#b6").attr("style","background-color:white");
-                    $("#bb6").attr("style","font-size:14px;color:rgb(157,186,209)");
+                  $("#b6").attr("src","../static/열린관광이미지/저상버스접근가능F.png");
                 }
 
                 if(Data.help.indexOf("휠체어 대여") != -1)
                 {
-                    $("#b7").attr("style","background-color:rgb(157,186,209)");
-                    $("#bb7").attr("style","font-size:14px;color:white");
+                  $("#b7").attr("src","../static/열린관광이미지/휠체어대여T.png");
                 }
                 else
                 {
-                    $("#b7").attr("style","background-color:white");
-                    $("#bb7").attr("style","font-size:14px;color:rgb(157,186,209)");
+                  $("#b7").attr("src","../static/열린관광이미지/휠체어대여F.png");
                 }
 
                 if(Data.help.indexOf("시각장애인 편의서비스") != -1)
                 {
-                    $("#b8").attr("style","background-color:rgb(157,186,209)");
-                    $("#bb8").attr("style","font-size:14px;color:white");
+                  $("#b8").attr("src","../static/열린관광이미지/시각장애인편의서비스T.png");
                 }
                 else
                 {
-                    $("#b8").attr("style","background-color:white");
-                    $("#bb8").attr("style","font-size:14px;color:rgb(157,186,209)");
+                  $("#b8").attr("src","../static/열린관광이미지/시각장애인편의서비스F.png");
                 }
 
                 if(Data.help.indexOf("청각장애인 편의서비스") != -1)
                 {
-                    $("#b9").attr("style","background-color:rgb(157,186,209)");
-                    $("#bb9").attr("style","font-size:14px;color:white");
+                  $("#b9").attr("src","../static/열린관광이미지/청각장애인편의서비스T.png");
                 }
                 else
                 {
-                    $("#b9").attr("style","background-color:white");
-                    $("#bb9").attr("style","font-size:14px;color:rgb(157,186,209)");
+                  $("#b9").attr("src","../static/열린관광이미지/청각장애인편의서비스F.png");
                 }
 
                 if(Data.help.indexOf("수유실") != -1)
                 {
-                    $("#b10").attr("style","background-color:rgb(157,186,209)");
-                    $("#bb10").attr("style","font-size:14px;color:white");
+                  $("#b10").attr("src","../static/열린관광이미지/수유실T.png");
                 }
                 else
                 {
-                    $("#b10").attr("style","background-color:white");
-                    $("#bb10").attr("style","font-size:14px;color:rgb(157,186,209)");
+                  $("#b10").attr("src","../static/열린관광이미지/수유실F.png");
                 }
 
                 if(Data.help.indexOf("장애인 객실") != -1)
                 {
-                    $("#b11").attr("style","background-color:rgb(157,186,209)");
-                    $("#bb11").attr("style","font-size:14px;color:white");
+                  $("#b11").attr("src","../static/열린관광이미지/장애인객실T.png");
                 }
                 else
                 {
-                    $("#b11").attr("style","background-color:white");
-                    $("#bb11").attr("style","font-size:14px;color:rgb(157,186,209)");
+                  $("#b11").attr("src","../static/열린관광이미지/장애인객실F.png");
                 }
 
                 if(Data.help.indexOf("유모차 대여") != -1)
                 {
-                    $("#b12").attr("style","background-color:rgb(157,186,209)");
-                    $("#bb12").attr("style","font-size:14px;color:white");
+                  $("#b12").attr("src","../static/열린관광이미지/유모차대여T.png");
                 }
                 else
                 {
-                    $("#b12").attr("style","background-color:white");
-                    $("#bb12").attr("style","font-size:14px;color:rgb(157,186,209)");
+                  $("#b12").attr("src","../static/열린관광이미지/유모차대여F.png");
                 }
 
                   </script>
                 <div class="compare-frame" style="position:relative; width: 587px; height: 350px; top: 15px;" >
-                  <h3 style="position:relative; top: 10px; ">고객 리뷰의 주요 키워드</h3>
-                  <img id="wordcloudSrc" width="470" height="250" style="position:relative; top:25px;" src="https://fluffyword.s3.ap-northeast-2.amazonaws.com/숙소별+리뷰+워드클라우드/(주)척산온천휴양촌.jpg" onerror="sendError();">
+                  <h3 style="position:relative; top: 10px;text-align:center">고객 리뷰의 주요 키워드</h3>
+                  <img id="wordcloudSrc" width="470" height="250" style="position:relative; top:25px; left:62px" src="https://fluffyword.s3.ap-northeast-2.amazonaws.com/숙소별+리뷰+워드클라우드/(주)척산온천휴양촌.jpg" onerror="sendError();">
 
                 </div>
                 <script>
@@ -251,8 +235,8 @@
                     $("#wordcloudSrc").attr("src", "{{ url_for('static', filename='infopage_img/sorry.png')}}");
 
                     }
-                </script>
 
+                </script>
 
                 <div style="position: relative; top: 30px;">
                     <div class="card-columns">
@@ -433,4 +417,5 @@
   </div>
   <br>
   <br>
+  
 </body>
