--- a/flask/templates/index.html
+++ b/flask/templates/index.html
@@ -92,7 +92,7 @@
                         <option value="광주광">광주</option>
                         <option value="대전광">대전</option>
                         <option value="울산광">울산</option>
-                        <option value="세종특별">세종</option>
+                        <option value="세종특">세종</option>
                         <option value="경기도">경기</option>
                         <option value="강원도">강원</option>
                         <option value="충청북도">충북</option>
