--- a/flask/templates/infopage.html
+++ b/flask/templates/infopage.html
@@ -331,7 +331,7 @@
         </script>
         <div class="blog-card" style="position: relative; left: 30px; top: 30px;">
           <div class="meta">
-            <div class="photo" id="firstCardImg"style="background-image: url(https://cdn.visitkorea.or.kr/img/call?cmd=VIEW&id=806d3a5c-f4bf-4ad3-8c52-59ae5a988689)"></div>
+            <div class="photo" id="firstCardImg"style="background-image: url(http://cdn.visitkorea.or.kr/img/call?cmd=VIEW&id=b30c4f25-1c3c-4bc6-a51c-9a61f297c124)"></div>
 
           </div>
           <div class="description">
