조건 부합 시 alert창

--- a/flask/templates/infopage.html
+++ b/flask/templates/infopage.html
@@ -367,7 +367,15 @@
 
           </div>
           <div class="description">
-            <h1 id ="SecondCardTitle">Name</h1>
+            <h1 id ="SecondCardTitle"style=
+                              "overflow: hidden; 
+                              text-overflow: ellipsis; 
+                              display: -webkit-box; 
+                              -webkit-line-clamp: 1 ; 
+                              -webkit-box-orient: vertical; 
+                              word-wrap:break-word; 
+                              line-height: 1.2em; 
+                              height: 1.2em;">>Name</h1>
             <h2 id="SecondCardAddress">Address</h2>
             <p id="SecondCardInfo" style=
                                         "overflow: hidden; 
@@ -393,7 +401,15 @@
 
     </div>
     <div class="description">
-        <h1 id ="thirdCardTitle">Name</h1>
+        <h1 id ="thirdCardTitle"style=
+                                "overflow: hidden; 
+                                text-overflow: ellipsis; 
+                                display: -webkit-box; 
+                                -webkit-line-clamp: 1 ; 
+                                -webkit-box-orient: vertical; 
+                                word-wrap:break-word; 
+                                line-height: 1.2em; 
+                                height: 1.2em;">>Name</h1>
         <h2 id="thirdCardAddress">Address</h2>
         <p id="thirdCardInfo" style=
                                     "overflow: hidden; 
