--- a/flask/templates/index.html
+++ b/flask/templates/index.html
@@ -1,3 +1,11 @@
+{% with messages = get_flashed_messages() %}
+    {% if messages %}
+    <script>  
+        alert("조건에 일치하는 결과가 없습니다.\n다른 조건에서 검색해 주세요.") 
+        document.body.scrollTop = document.body.scrollHeight;
+    </script>
+    {% endif %}
+{% endwith %}
 <!DOCTYPE html>
 
 <html>
